# tree-builder

./: LICENSE  README.md  pyproject.toml
config/: config.yaml
data/raw/: sample_sheet.csv
src/: bootstrap.py  main.py  profile.py  utils.py
tests/: conftest.py  test_profile.py
